# llm-streaming-semantics-audit

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: bedrock_sdk_config.md  benign_experiment_manifest.example.toml  benign_pilot_policy.md  experiment_scope.md  external_safety_prompt_source.md  judge_adjudication_plan.md  legacy_project_notes.md  metrics.md  metrics_registry.yaml  p3_overnight_batch.md  phase1_quality_gate.md  phase1_unknown_fields_review.md  phase2_plan.md  phase2_real_pilot_plan.md  phase3_mock_safety_harness.md  phase3_plan.md  phase3_quality_gate.md  phase3_safety_pilot_plan.md  project_progress.toml  provider_evidence.yaml  provider_matrix.md  real_api_data_policy.md  research_charter.md  safety_prompt_policy.md  safety_prompt_registry.example.yaml  scaled_benign_experiment_plan.md  semantics_taxonomy.md  stop_reason_probe_manifest.example.toml  stop_reason_probe_plan.md  trace_contract.md  xiaomi_mimo_sdk_config.md
scripts/: analyze_p3_paired.py  audit_p3_results.py  check_judge_ready.py  check_p3_mock_safety_ready.py  check_p3_safety_pilot_ready.py  check_phase1_ready.py  check_phase2_pilot_ready.py  check_phase3_ready.py  check_scaled_benign_ready.py  compare_benign_lifecycle.py  generate_provider_matrix.py  inspect_external_safety_prompts.py  provider_evidence.py  run_benign_batch.py  run_judge_adjudication.py  run_mock_pilot.py  run_mock_safety_pilot.py  run_p3_overnight_batch.py  run_real_benign_pilot.py  run_safety_signal_pilot.py  summarize_p3_run.py  summarize_real_pilot.py  update_readme_status.py  (+1 more)
(+66 files in other folders)
