[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-streaming-semantics-audit"
version = "0.1.0"
description = "Black-box audit scaffolding for streaming LLM runtime semantics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "All rights reserved" }
authors = [{ name = "Guanjie" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
providers = ["openai>=1.107.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/lssa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
